# qt-spy

./: .gitignore  CMakeLists.txt  README.md
bootstrap/: CMakeLists.txt
bootstrap/include/qt_spy/: bootstrap.h
bootstrap/src/: bootstrap.cpp
bridge/: CMakeLists.txt
bridge/include/qt_spy/: bridge_client.h
bridge/src/: bridge_client.cpp
cli/: CMakeLists.txt
cli/src/: main.cpp
inspector/: CMakeLists.txt
inspector/src/: connection_manager.cpp  connection_manager.h  hierarchy_tree.cpp  hierarchy_tree.h  main.cpp  main_window.cpp  main_window.h  node_data.cpp  node_data.h  process_selector.cpp  process_selector.h  property_grid.cpp  property_grid.h
probe/: CMakeLists.txt
probe/include/qt_spy/: probe.h  protocol.h
probe/src/: probe.cpp
sample_mmi/: CMakeLists.txt
sample_mmi/src/: main.cpp
sample_plain_mmi/: CMakeLists.txt
sample_plain_mmi/src/: main.cpp
scripts/: connect_qt_spy.sh  inject_qt_spy.sh
tests/: CMakeLists.txt
tests/bridge/: CMakeLists.txt  tst_bridge_client.cpp  tst_probe_bridge.cpp
tests/integration/: CMakeLists.txt  tst_cli_injection.cpp  tst_cli_reconnect.cpp
